Fix text spacing at bottom of page

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -84,13 +84,13 @@ html {
 
 :global(#app-lower) {
   background-color: #ce4c73;
-  padding: 1% 3%;
+  padding: 3%;
 }
 
 :global(#team-members) {
   margin: 0;
 }
 
-:global(#member-container) div {
-  padding: 1% 5%;
+:global(#member-container) {
+  text-align: center;
 }
